--- a/.classpath
+++ b/.classpath
@@ -27,5 +27,6 @@
 	<classpathentry kind="lib" path="dynamiccloudsim/trunk/lib/pegasus-4.4.0cvs.jar"/>
 	<classpathentry kind="lib" path="dynamiccloudsim/trunk/lib/xercesImpl-2.11.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/wtt/Documents/MATLAB/taksassign/for_redistribution_files_only/taksassign.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/MATLAB/R2017b/toolbox/javabuilder/jar/javabuilder.jar"/>
 	<classpathentry kind="output" path="dynamiccloudsim/bin"/>
 </classpath>
