--- a/dynamiccloudsim/bin/log4j.properties
+++ b/dynamiccloudsim/bin/log4j.properties
@@ -1,9 +1,10 @@
 ### setting ###
 log4j.rootLogger=info,file
 
-log4j.appender.file=org.apache.log4j.FileAppender
+log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.File=c://log/log.log
 log4j.appender.file.Append=true
 log4j.appender.file.Threshold=INFO
+log4j.appender.file.MaxFileSize=10GB
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%m%n
